test/corpus/text/html_with_embedded.txt
==================
HTML with embedded expression in attribute
==================
<img src="/images/{{ user.image }}.jpg" />
---

(program
    (text)
    (embedded
        (dot_expr
            left: (ident_expr)
            key: (ident_expr)))
    (text))
